--- a/index.html
+++ b/index.html
@@ -1,1 +1,141 @@
-Mindo Software SLU
+<!doctype html>
+<html class="no-js" lang="">
+<head>
+  <meta charset="utf-8">
+  <meta name="description" content="Mindo Software">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="apple-touch-icon.png" rel="apple-touch-icon" >
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+  <link href="styles/main.css" rel="stylesheet" >
+  <script defer src="js/all.js"></script>
+  <title>Mindo Software SLU</title>
+</head>
+<body>
+<div class="block block-main">
+  <div class="content container">
+    <h1>Mindo Software</h1>
+    <h2>Medical mobile apps, web applications<br>Regulatory support and clinical evaluations</h2>
+  </div>
+</div>
+
+<div class="block block-services">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6 col-sm-6">
+        <h3>Medical mobile apps</h3>
+
+        <ul class="list-unstyled">
+          <li>- Native ios and android development</li>
+          <li>- Connected car apps</li>
+          <li>- Meticulous design and user experience</li>
+          <li>- Hardware connectivity and interaction</li>
+        </ul>
+
+        <i class="fab fa-android fa-3x"></i>
+        <i class="fab fa-apple fa-3x"></i>
+      </div>
+
+      <div class="col-md-6 col-sm-6">
+        <h3>Web applications</h3>
+
+        <ul class="list-unstyled">
+          <li>- Feature-rich cross-browser web applications</li>
+          <li>- Rock-solid backend systems</li>
+          <li>- Medical databases and APIs</li>
+          <li>- Hardware connectivity and interaction</li>
+      </ul>
+        <i class="fab fa-html5 fa-3x"></i>
+        <i class="fa fa-server fa-3x"></i>
+        <i class="fa fa-cloud fa-3x"></i>
+      </div>
+
+      <div class="col-md-6 col-sm-6">
+        <h3>Quality assurance</h3>
+        <ul class="list-unstyled">
+          <li>- Interim Quality Management</li>
+          <li>- Quality Management Systems (implementing ISO 13485)</li>
+          <li>- Software development processes following IEC 62304</li>
+        </ul>
+      </div>
+
+      <div class="col-md-6 col-sm-6">
+        <h3>Clinical Evaluations</h3>
+        <ul class="list-unstyled">
+          <li>- Health technology assessment (HTA)</li>
+          <li>- Compliance with EU Directive 93/42/EEC</li>
+          <li>- Usability Studies</li>
+        </ul>
+        <i class="fa fa-heartbeat fa-3x"></i>
+        <i class="fa fa-user-md fa-3x"></i>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="block block-staff">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h4 class="trail-0">Dr. Joachim Neumann</h4>
+        <small>Physicist</small><br>
+        <ul class="list-unstyled">
+          <li>
+            16+ years experience in medical software development.
+            <ul class="list-unstyled">
+              <li>- Expert in Quality Managment Systems for Mobile Medical Apps</li>
+              <li>- Passionate iOS developer</li>
+              <li>- 16+ years experience in hearing research</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4 class="trail-0">Dr. Alexander Bunkenburg</h4>
+        <small>Software Developer</small><br>
+        <ul class="list-unstyled">
+          <li>
+            18+ years of experience in software development.
+            <ul class="list-unstyled">
+              <li>- java, web, Internet and mobile solutions</li>
+              <li>- PhD in formal methods of computing science</li>
+              <li>- Software Architect at Infojobs, Spain</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+      <div class="col-md-4">
+        <h4 class="trail-0">Dr. Nadine J. Kubesch</h4>
+        <small>Biomedical Research Scientist</small><br>
+        <ul class="list-unstyled">
+          <li>
+            10+ years of experience in health and health service research,
+            epidemiology, and health technology assessment (HTA).
+            <ul class="list-unstyled">
+              <li>- Clinical Evaluation Reports for mobile health technologies</li>
+              <li>- Review of scientific literature and primary evidence base building</li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="block block-contact">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12 col-sm-12">
+        Mindo Software currently operates in Germany and Spain.<br><br>
+        <ul class="list-unstyled">
+          <li>Mindo Software SLU, NIF B66581281</li>
+          <li>Calle Clot 76, 3r in 08018 Barcelona, Spain</li>
+          <li>Umsatzsteuer-Identifikationsnummer: VIES ESB66581281</li>
+          <li><a href="mailto:joachim@mindo.io?subject=Hello">joachim@mindo.io</a>, <a href="tel:+49 721 91671131">+49 721 91671131</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
+
+</body>
+</html>
